@@ -3,6 +3,7 @@ package com.example.apiJwtToken.controller;
 import com.example.apiJwtToken.dto.LoginRequest;
 import com.example.apiJwtToken.service.ApplicationService;
 import com.example.apiJwtToken.service.JwtAppService;
+import com.example.apiJwtToken.service.JwtRedisService;
 import com.example.apiJwtToken.service.JwtService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,20 +17,17 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 
+import java.util.Arrays;
 import java.util.List;
 
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class LoginControllerTest {
+class LoginControllerTest {
 
     @Mock
     private AuthenticationManager authenticationManager;
@@ -43,29 +41,33 @@ public class LoginControllerTest {
     @Mock
     private JwtAppService jwtAppService;
 
-    @InjectMocks
-    private LoginController loginController;
-
     @Mock
     private ApplicationService applicationService;
 
+    @Mock
+    private JwtRedisService jwtRedisService;
+
+    @InjectMocks
+    private LoginController loginController;
+
     private LoginRequest loginRequest;
-    private UserDetails userDetails;
     private Authentication authentication;
+    private UserDetails userDetails;
 
     @BeforeEach
     void setUp() {
         loginRequest = new LoginRequest();
         loginRequest.setUsername("testUser");
-        loginRequest.setPassword("password"); 
-        loginRequest.setEmail("testUser@gmail.com");
-        userDetails = new User("testUser", "password", java.util.Collections.emptyList());
-        authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+        loginRequest.setPassword("password");
+
+        authentication = mock(Authentication.class);
+        userDetails = mock(UserDetails.class);
     }
 
     @Test
     void login_success() {
         when(authenticationManager.authenticate(any(UsernamePasswordAuthenticationToken.class))).thenReturn(authentication);
+        when(authentication.isAuthenticated()).thenReturn(true);
         when(userDetailsService.loadUserByUsername(loginRequest.getUsername())).thenReturn(userDetails);
         when(jwtService.generateToken(userDetails)).thenReturn("testToken");
 
@@ -73,39 +75,51 @@ public class LoginControllerTest {
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals("testToken", response.getBody());
+        verify(jwtRedisService).storeToken(loginRequest.getUsername(), "testToken");
     }
 
     @Test
     void login_invalidCredentials() {
-        when(authenticationManager.authenticate(any(UsernamePasswordAuthenticationToken.class))).thenThrow(new BadCredentialsException("Invalid credentials"));
+        when(authenticationManager.authenticate(any(UsernamePasswordAuthenticationToken.class)))
+                .thenThrow(new BadCredentialsException("Invalid credentials"));
 
-        assertThrows(BadCredentialsException.class, () -> loginController.login(loginRequest));
+        ResponseEntity<String> response = loginController.login(loginRequest);
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        assertEquals("Invalid credentials", response.getBody());
+        verify(jwtRedisService, never()).storeToken(anyString(), anyString());
     }
 
     @Test
     void appLogin_success() {
-        String appName = "testApp";
-        loginRequest = new LoginRequest();
-        loginRequest.setUsername("testUser");
-        loginRequest.setPassword("password"); 
-        loginRequest.setEmail("testUser@gmail.com");
-        when(authenticationManager.authenticate(any(UsernamePasswordAuthenticationToken.class))).thenReturn(authentication);
-        when(userDetailsService.loadUserByUsername(loginRequest.getUsername())).thenReturn(userDetails);
-        when(jwtAppService.generateToken(userDetails, appName)).thenReturn("appTestToken");
-        when(applicationService.findAllApplicationNames()).thenReturn(List.of("testApp")); // Add this line
+        String applicationName = "testApp";
+        List<String> applications = Arrays.asList("testApp", "otherApp");
 
-        ResponseEntity<String> response = loginController.appLogin(loginRequest, appName);
+        when(applicationService.findAllApplicationNames()).thenReturn(applications);
+        when(authenticationManager.authenticate(any(UsernamePasswordAuthenticationToken.class))).thenReturn(authentication);
+        when(authentication.isAuthenticated()).thenReturn(true);
+        when(userDetailsService.loadUserByUsername(loginRequest.getUsername())).thenReturn(userDetails);
+        when(jwtAppService.generateToken(userDetails, applicationName)).thenReturn("appToken");
+
+        ResponseEntity<String> response = loginController.appLogin(loginRequest, applicationName);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals("appTestToken", response.getBody());
+        assertEquals("appToken", response.getBody());
+        verify(jwtRedisService).storeToken(loginRequest.getUsername(), "appToken");
     }
 
     @Test
-    void appLogin_invalidCredentials() {
-        String appName = "testApp";
-        when(authenticationManager.authenticate(any(UsernamePasswordAuthenticationToken.class))).thenThrow(new BadCredentialsException("Invalid credentials"));
-        when(applicationService.findAllApplicationNames()).thenReturn(List.of("testApp")); // Add this line
+    void appLogin_invalidApplicationName() {
+        String applicationName = "invalidApp";
+        List<String> applications = Arrays.asList("testApp", "otherApp");
 
-        assertThrows(BadCredentialsException.class, () -> loginController.appLogin(loginRequest, appName));
+        when(applicationService.findAllApplicationNames()).thenReturn(applications);
+
+        ResponseEntity<String> response = loginController.appLogin(loginRequest, applicationName);
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        assertEquals("Application name is not valid", response.getBody());
+        verify(authenticationManager, never()).authenticate(any(UsernamePasswordAuthenticationToken.class));
+        verify(jwtRedisService, never()).storeToken(anyString(), anyString());
     }
 }
